# dice

./: .gitignore  Cargo.toml  README.md
dice-wasm/: Cargo.toml
dice-wasm/src/: lib.rs
dice2/dice/: Dice.afdesign
src/: dicelib.rs  lib.rs  main.rs
