[package]
name = "dice-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# Keep image lean: enable only the formats you plan to accept
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff", "webp"] }
imageproc = "0.25"
ab_glyph = "0.2"
console_error_panic_hook = "0.1"

[features]
wee-alloc = []

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
